k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tops-worker
  labels:
    name: tops-worker
