k8s/base/service-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: tops-worker-service
spec:
  selector:
    app: tops-worker
    component: worker
  ports:
  - name: http
    port: 8082
    targetPort: 8082
    protocol: TCP
  type: ClusterIP
